--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,24 @@
     <artifactId>pos2020</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <lombokVersion>1.18.12</lombokVersion>
+        <commonsLang3Version>3.1</commonsLang3Version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombokVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commonsLang3Version}</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
