--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <properties>
         <lombokVersion>1.18.12</lombokVersion>
         <commonsLang3Version>3.1</commonsLang3Version>
+        <junitVersion>5.6.2</junitVersion>
+        <junitPlatformRunnerVersion>1.6.2</junitPlatformRunnerVersion>
     </properties>
 
     <dependencies>
@@ -25,7 +27,24 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commonsLang3Version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junitVersion}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>${junitPlatformRunnerVersion}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junitVersion}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
 
 </project>
